# AgentNav

./: .gitignore  README.md  README_CN.md  setup.py
.claude/: settings.local.json
agentnav/: ROS2-V5.0(humble)常用指令.txt  __init__.py  pyproject.toml  ros2-humble-commands.txt
agentnav/bridge_core/: driver_meta.py  robot_state.py  server.py  task_manager.py  telegram_notifier.py
agentnav/clients/: navdp_local_client.py
agentnav/config/: nanobot_config.json
agentnav/core/: navdp_agent.py  pipeline.py  ros_client.py  s1_client.py  s2_client.py
agentnav/drivers/: look.py  nav.py  perception.py  ros_introspect.py  status.py  stop.py
agentnav/robot/: ros_client.py
agentnav/scripts/: start_jetson.sh  start_robot_agent.sh  start_s2_server.sh
agentnav/skills/: explore.md  locate.md  navigate.md  ros_introspect.md  ros_package_install.md
nanobot/: README_nanobot.md
nanobot/agent/: loop.py  memory.py  skills.py
nanobot/channels/: qq.py
nanobot/config/: schema.py
nanobot/providers/: registry.py
scripts/: start_jetson.sh  start_s2_server.sh
tests/: test_feishu_post_content.py
