[project]
name = "agentnav"
version = "0.1.0"
description = "Robot navigation app — runs on nanobot (Agent OS) via MCP over stdio"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # MCP server (same version range as nanobot)
    "mcp>=1.26.0,<2.0.0",
    # HTTP client for S2 server calls (Phase 2)
    "httpx>=0.28.0,<1.0.0",
    # Numerical operations for pixel_to_pose (Phase 3)
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ros2 = [
    # Install manually from ROS2 apt packages; listed here for documentation only.
    # rclpy, cv_bridge, tf2_ros, sensor_msgs
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentnav"]
